# recorder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  video.yaml
static/: index.html
videosrv/: .dockerignore  Cargo.toml  docker-compose.yml
videosrv/src/: error.rs  gs.rs  live.rs  main.rs  model.rs  video_cache.rs
