[package]
name = "videosrv"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features=["derive"] }
serde_yaml = "0.8"
gstreamer = "0.18"
gstreamer-app = "0.18"
chrono = {version="0.4.19", features = ["serde"]}
actix = "0.13"
actix-codec = "0.5"
nactix-files = "0.6"
actix-rt = "2"
actix-web = "4"
actix-web-actors = "4.1"
actix-cors = "0.6.1"
env_logger = "0.9"
futures-util = { version = "0.3.7", default-features = false, features = ["std", "sink"] }
tokio = { version = "1.19", features = ["full", "sync"] }
tokio-stream = "0.1.8"
tracing = "0.1"
tracing-subscriber = "0.2"
async-stream = "0.3.3"
anyhow = "1.0.58"
structopt = "0.3"
serde_json = "1.0.82"
base64 = "0.13.0"
ring = "0.16.20"
dotenv = "0.15.0"
itertools = "0.10"
walkdir = "2.3.2"
notify = "4.0.17"
